--- a/How_is_it_trained.ipynb
+++ b/How_is_it_trained.ipynb
@@ -50,12 +50,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "更新：记录位移信息，允许使用道具（指伤药葫芦等道具）  \n",
+    "但是，这些信息暂时不参与训练，以后再用。位移和道具目前被统一归到其他类。  \n",
+    "参与训练的仍然是 攻击、防御、垫步、跳跃、其他类。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "~~~python\n",
     "def get_output(keys):    # 对按键信息进行独热编码\n",
     "\n",
     "    output = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
     "\n",
-    "    # 攻击、防御、垫步、跳跃和使用道具不能同时进行，但是可以和移动同时进行\n",
+    "    # 攻击、防御、垫步、跳跃和使用道具不能同时进行（指0.1秒内），但是可以和移动同时进行\n",
     "    if   'J' in keys:\n",
     "        output[0] = 1    # 等同于[1, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
     "    elif 'K' in keys:\n",
@@ -74,16 +83,12 @@
     "        output[6] = 1    # 等同于[0, 0, 0, 0, 0, 0, 1, 0, 0, 0]\n",
     "    elif 'S' in keys:\n",
     "        output[7] = 1    # 等同于[0, 0, 0, 0, 0, 0, 0, 1, 0, 0]\n",
-    "    else:\n",
-    "        output[4] = 1    # 等同于[0, 0, 0, 0, 1, 0, 0, 0, 0, 0]\n",
     "\n",
     "    # 不能同时左右移动\n",
     "    if   'A' in keys:\n",
     "        output[8] = 1    # 等同于[0, 0, 0, 0, 0, 0, 0, 0, 1, 0]\n",
     "    elif 'D' in keys:\n",
     "        output[9] = 1    # 等同于[0, 0, 0, 0, 0, 0, 0, 0, 0, 1]\n",
-    "    else:\n",
-    "        output[4] = 1    # 等同于[0, 0, 0, 0, 1, 0, 0, 0, 0, 0]\n",
     "\n",
     "    return output\n",
     "~~~"
@@ -108,8 +113,6 @@
     "    if not os.path.exists(self.save_path):    # 确保保存的位置存在\n",
     "        os.mkdir(self.save_path)\n",
     "\n",
-    "    self.reward_system = RewardSystem()    # 奖惩系统\n",
-    "\n",
     "    self.step = 0    # 计步器\n",
     "~~~"
    ]
@@ -126,7 +129,7 @@
    "metadata": {},
    "source": [
     "保存数据，统一名称为 f'training_data-{n}.npy'，例如 training_data-123.npy  \n",
-    "从1开始检测文件名是否存在于保存路径，直到检测到不存在就保存"
+    "从1开始检测文件名是否存在于保存路径，直到检测到不存在就保存，主要是为了防止文件名重复不小心把原本的文件覆盖了"
    ]
   },
   {
@@ -140,10 +143,10 @@
     "        filename = f'training_data-{n}.npy'\n",
     "        save_path = os.path.join(self.save_path, filename)\n",
     "        if not os.path.exists(save_path):    # 没有重复的文件名就执行保存并退出\n",
+    "            print(save_path)\n",
     "            np.save(save_path, self.dataset)\n",
     "            break\n",
     "        n += 1\n",
-    "    return filename[:-4]\n",
     "~~~"
    ]
   },
@@ -178,10 +181,7 @@
     "            \"\"\"\n",
     "\n",
     "            if 'P' in keys:    # 结束，保存数据\n",
-    "                filename = self.save_data()    # 保存数据，保存结束后返回符合条件的文件名\n",
-    "                self.reward_system.save_reward_curve(\n",
-    "                    save_path = os.path.join('Data_quality', self.target, filename+'.png')\n",
-    "                )    # 绘制 reward 曲线并保存在当前目录\n",
+    "                self.save_data()    # 保存数据\n",
     "                break\n",
     "~~~"
    ]
@@ -193,22 +193,19 @@
     "**核心部分**  \n",
     "- 记录数据的条件是非黑屏  \n",
     "- 数据采集降频的目的是缓解数据不平衡和提高 action 与 reward 的对应程度\n",
-    "    - 按键检测的原理是检测当前键盘上正在按着的键，我们的操作有按键有松键，按键对应了4种动作（攻防垫跳），松键只对应1个动作（其他），所以会有大量数据集中在松键状态，而采集频率的增加则会加剧这种情况。\n",
+    "    - 按键检测的原理是检测当前键盘上正在按着的键，我们的操作有按键有松键，按键对应了多种动作，松键只对应1个动作（其他），所以会有大量数据集中在松键状态，而采集频率的增加则会加剧这种情况。\n",
     "    - 游戏接受玩家的按键信号，然后让人物执行相应的动作，过一会玩家从屏幕观测到状态变化（生命值和架势的变化）。如果采集频率过高，会导致状态变化可能存在好几个新状态之后， action 与 reward 不对应会导致训练出现严重的后果甚至训练结果是无效的。\n",
     "\n",
     "~~~python\n",
     "screen = get_screen()    # 获取屏幕图像\n",
-    "if not (np.sum(screen == 0) > 5000):    # 正常情况下不会有那么多值为0的像素点，除非黑屏了\n",
+    "if not (np.sum(screen == 0) > 32400):    # 270 * 480 / 4 = 32400 ，当图像有1/4变成黑色（像素值为0）的时候停止暂停数据数据\n",
     "    action_onehot = get_output(keys)    # 获取按键输出\n",
-    "    action = np.argmax(action_onehot[:5])\n",
     "    self.dataset.append([screen, action_onehot])    # 图像和输出打包在一起，保证一一对应\n",
     "\n",
-    "    reward = self.reward_system.get_reward(get_status(screen, show=True))    # 计算 reward\n",
-    "\n",
-    "    # 降低数据采集的频率，两次采集的时间间隔为0.1秒\n",
-    "    t = 0.1-(time.time()-last_time)\n",
-    "    if t > 0:\n",
-    "        time.sleep(t)\n",
+    "# 降低数据采集的频率，两次采集的时间间隔为0.1秒\n",
+    "t = 0.1-(time.time()-last_time)\n",
+    "if t > 0:\n",
+    "    time.sleep(t)\n",
     "~~~"
    ]
   },
@@ -230,10 +227,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Data_quality (存放收集数据时记录的reward曲线)\n",
-    "    - Genichiro_Ashina （苇名弦一郎）\n",
-    "        - training_data-1.png （第一个战斗数据的reward曲线）\n",
-    "- \n",
     "- The_battle_memory\n",
     "    - Genichiro_Ashina （苇名弦一郎）\n",
     "        - training_data-1.npy （第一个战斗数据）"
@@ -251,7 +244,10 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "target = 'Genichiro_Ashina' # 苇名弦一郎\n",
+    "# target = 'Genichiro_Ashina' # 苇名弦一郎\n",
+    "# target = 'Inner_Genichiro' # 心中的弦一郎\n",
+    "# target = 'Isshin,_the_Sword_Saint' # 剑圣一心\n",
+    "target = 'Inner_Isshin' # 心中的一心\n",
     "path = os.path.join('The_battle_memory', target, f'training_data-{1}.npy')\n",
     "data = np.load(path, allow_pickle=True)\n",
     "\n",
@@ -288,7 +284,7 @@
     "# 统计动作分布\n",
     "def motionCounts(Y):\n",
     "\n",
-    "    columns=['攻击', '弹反', '垫步', '跳跃', '其他', '道具', '向前', '向后', '向左', '向右']\n",
+    "    columns=['攻击', '弹反', '垫步', '跳跃', '无键', '道具', '向前', '向后', '向左', '向右']\n",
     "    df = pd.DataFrame(Y, columns=columns, dtype=np.uint8)\n",
     "    \n",
     "    total = len(df)\n",
@@ -307,9 +303,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pysekiro.get_vertices import roi\n",
+    "\n",
     "print()\n",
-    "print('以视频的形式展示数据(展示前200个)。', '要你自己运行才看得见视频')\n",
-    "data = data[:200]\n",
+    "print('以视频的形式展示数据。', '要你自己运行才看得见视频')\n",
     "Remaining = len(data)\n",
     "for screen, action_value in data:\n",
     "    action = np.argmax(action_value)\n",
@@ -326,10 +323,11 @@
     "        a = '其他'\n",
     "\n",
     "    cv2.imshow('screen', screen)\n",
-    "    cv2.waitKey(30)\n",
+    "    cv2.imshow('roi', roi(screen, x=140, x_w=340, y=30, y_h=230))\n",
+    "    cv2.waitKey(1)\n",
     "\n",
     "    Remaining -= 1\n",
-    "    print(f'\\r 剩余: {Remaining:>4}, 动作:{action_value}', end='\\n') # end=''\n",
+    "    print(f'\\r 剩余: {Remaining:>4}, 动作:{a}{action_value}', end='') # end='\\n'\n",
     "    if cv2.waitKey(1) & 0xFF == ord('q'):    # 按 q 键关闭视频\n",
     "        cv2.destroyAllWindows()\n",
     "        break\n",
@@ -392,7 +390,7 @@
     "    target,\n",
     "    start=1,\n",
     "    end=1,\n",
-    "    batch_size=8,\n",
+    "    batch_size=128,\n",
     "    epochs=1,\n",
     "    model_weights=None\n",
     "    ):\n",
@@ -495,13 +493,14 @@
     "~~~python\n",
     "def learn_offline(\n",
     "    target,\n",
-    "    start =1,\n",
-    "    end = 1,\n",
+    "    start=1,\n",
+    "    end=1,\n",
     "    model_weights=None,\n",
     "    save_path=None\n",
     "    )\n",
     "\n",
     "    sekiro_agent = Sekiro_Agent(\n",
+    "        batch_size = 256,\n",
     "        model_weights = model_weights,\n",
     "        save_path = save_path\n",
     "    )\n",
@@ -648,7 +647,7 @@
     "        if t > 0:\n",
     "            time.sleep(t)\n",
     "\n",
-    "        if 'P' in keys or step == 1000:\n",
+    "        if 'P' in keys:\n",
     "            if train:\n",
     "                sekiro_agent.save_evaluate_network()    # 学习完毕，保存网络权重\n",
     "            sekiro_agent.reward_system.save_reward_curve(save_path='learn_online.png')    # 绘制 reward 曲线并保存在当前目录\n",
@@ -696,7 +695,7 @@
     "**训练部分**  \n",
     "~~~python\n",
     "if train:\n",
-    "    if not (np.sum(screen == 0) > 5000 or np.sum(next_screen == 0) > 5000):    # 正常情况下不会有那么多值为0的像素点，除非黑屏了\n",
+    "    if not (np.sum(screen == 0) > 32400):    # 270 * 480 / 4 = 32400 ，当图像有1/4变成黑色（像素值为0）的时候停止暂停存储数据\n",
     "\n",
     "        # ---------- store ----------\n",
     "\n",
@@ -751,7 +750,7 @@
     "计算 reward 的原理\n",
     "~~~python\n",
     "# 约束状态值的上下限，防止波动过大影响训练，也防止异常值和特殊值的影响。\n",
-    "def limit(value, lm=10):\n",
+    "def limit(value, lm):\n",
     "    if value > lm:\n",
     "        return lm\n",
     "    elif value < -lm:\n",
@@ -801,7 +800,7 @@
     "    n_action = n_action, \n",
     "    gamma = 0.99,\n",
     "    batch_size = 8,\n",
-    "    replay_memory_size = 50000,\n",
+    "    replay_memory_size = 20000,\n",
     "    epsilon = 1.0,\n",
     "    epsilon_decrease_rate = 0.999,\n",
     "    update_freq = 50,\n",
@@ -819,6 +818,9 @@
     "    self.epsilon = epsilon                                # 探索参数\n",
     "    self.epsilon_decrease_rate = epsilon_decrease_rate    # 探索衰减率\n",
     "\n",
+    "    self.update_freq = update_freq    # 训练评估网络的频率\n",
+    "    self.target_network_update_freq = target_network_update_freq    # 更新目标网络的频率\n",
+    "\n",
     "    self.model_weights = model_weights    # 指定读取的模型参数的路径\n",
     "    self.save_path = save_path            # 指定模型权重保存的路径\n",
     "    if not self.save_path:\n",
@@ -830,8 +832,6 @@
     "    self.replayer = DQNReplayer(self.replay_memory_size)    # 经验回放\n",
     "\n",
     "    self.step = 0    # 计步\n",
-    "    self.update_freq = update_freq    # 训练评估网络的频率\n",
-    "    self.target_network_update_freq = target_network_update_freq    # 更新目标网络的频率\n",
     "~~~"
    ]
   },
