--- a/Quick_start.ipynb
+++ b/Quick_start.ipynb
@@ -149,9 +149,9 @@
    "outputs": [],
    "source": [
     "from pysekiro.collect_data import Data_collection\n",
-    "target = 'Genichiro_Ashina' # 苇名弦一郎\n",
+    "# target = 'Genichiro_Ashina' # 苇名弦一郎\n",
     "# target = 'Inner_Genichiro' # 心中的弦一郎\n",
-    "# target = 'Isshin,_the_Sword_Saint' # 剑圣一心\n",
+    "target = 'Isshin,_the_Sword_Saint' # 剑圣一心\n",
     "# target = 'Inner_Isshin' # 心中的一心\n",
     "c = Data_collection(target)\n",
     "c.collect_data()"
@@ -183,7 +183,7 @@
     "\n",
     "target = 'Genichiro_Ashina' # 苇名弦一郎\n",
     "\n",
-    "train(target, start=1, end=5)"
+    "train(target, start=1, end=1)"
    ]
   },
   {
@@ -304,7 +304,7 @@
     "from learn_offline import learn_offline\n",
     "\n",
     "target = 'Genichiro_Ashina' # 苇名弦一郎\n",
-    "learn_offline(target, start=1, end=5, save_path='offline_w.h5')"
+    "learn_offline(target, start=1, end=1, save_path='offline_w.h5')"
    ]
   },
   {
