--- a/How_is_it_trained.ipynb
+++ b/How_is_it_trained.ipynb
@@ -193,12 +193,12 @@
     "**核心部分**  \n",
     "- 记录数据的条件是非黑屏  \n",
     "- 数据采集降频的目的是缓解数据不平衡和提高 action 与 reward 的对应程度\n",
-    "    - 按键检测的原理是检测当前键盘上正在按着的键，我们的操作有按键有松键，按键对应了多种动作，松键只对应1个动作（其他），所以会有大量数据集中在松键状态，而采集频率的增加则会加剧这种情况。\n",
-    "    - 游戏接受玩家的按键信号，然后让人物执行相应的动作，过一会玩家从屏幕观测到状态变化（生命值和架势的变化）。如果采集频率过高，会导致状态变化可能存在好几个新状态之后， action 与 reward 不对应会导致训练出现严重的后果甚至训练结果是无效的。\n",
+    "    - 按键检测的原理是检测当前键盘上正在按着的键，我们的操作有按键和松键，按键对应了多种动作，松键只对应1个动作（其他），所以会有大量数据集中在松键状态，而采集频率的增加则会加剧这种情况。\n",
+    "    - 游戏接受玩家的按键信号，然后让人物执行相应的动作，过一会玩家从屏幕观测到状态变化（生命值和架势的变化）。如果采集频率过高，会导致状态变化可能存在于好几个新状态之后， action 与 reward 不对应会导致训练出现严重的后果甚至训练结果是无效的。\n",
     "\n",
     "~~~python\n",
     "screen = get_screen()    # 获取屏幕图像\n",
-    "if not (np.sum(screen == 0) > 32400):    # 270 * 480 / 4 = 32400 ，当图像有1/4变成黑色（像素值为0）的时候停止暂停数据数据\n",
+    "if not (np.sum(screen == 0) > 97200):    # 270 * 480 * 3 / 4 = 97200 ，当图像有1/4变成黑色（像素值为0）的时候停止暂停收集数据\n",
     "    action_onehot = get_output(keys)    # 获取按键输出\n",
     "    self.dataset.append([screen, action_onehot])    # 图像和输出打包在一起，保证一一对应\n",
     "\n",
@@ -227,6 +227,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- Data_quality (存放数据集对应的reward曲线)\n",
+    "    - Genichiro_Ashina （苇名弦一郎）\n",
+    "        - training_data-1.png （第一个战斗数据的reward曲线）\n",
+    "-\n",
     "- The_battle_memory\n",
     "    - Genichiro_Ashina （苇名弦一郎）\n",
     "        - training_data-1.npy （第一个战斗数据）"
@@ -244,10 +248,10 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "# target = 'Genichiro_Ashina' # 苇名弦一郎\n",
+    "target = 'Genichiro_Ashina' # 苇名弦一郎\n",
     "# target = 'Inner_Genichiro' # 心中的弦一郎\n",
     "# target = 'Isshin,_the_Sword_Saint' # 剑圣一心\n",
-    "target = 'Inner_Isshin' # 心中的一心\n",
+    "# target = 'Inner_Isshin' # 心中的一心\n",
     "path = os.path.join('The_battle_memory', target, f'training_data-{1}.npy')\n",
     "data = np.load(path, allow_pickle=True)\n",
     "\n",
@@ -272,7 +276,8 @@
    "outputs": [],
    "source": [
     "action_value = data[0][1]    # 选取了第一个数据的按键记录部分\n",
-    "print('按键记录', action_value)"
+    "print('按键记录', action_value)\n",
+    "print('目前的训练只使用前五个  ', action_value[:5])"
    ]
   },
   {
@@ -442,7 +447,7 @@
     "**训练部分**\n",
     "~~~python\n",
     "# 数据集处理成预训练格式\n",
-    "X = np.array([roi(i[0], x, x_w, y, y_h) for i in data]).reshape(-1, ROI_WIDTH, ROI_HEIGHT, FRAME_COUNT)\n",
+    "X = np.array([cv2.resize(roi(i[0], x, x_w, y, y_h), (ROI_WIDTH, ROI_HEIGHT)) for i in data]).reshape(-1, ROI_WIDTH, ROI_HEIGHT, FRAME_COUNT)\n",
     "Y = np.array([i[1][:5] for i in data])\n",
     "\n",
     "# 训练模型，然后保存\n",
@@ -500,7 +505,6 @@
     "    )\n",
     "\n",
     "    sekiro_agent = Sekiro_Agent(\n",
-    "        batch_size = 256,\n",
     "        model_weights = model_weights,\n",
     "        save_path = save_path\n",
     "    )\n",
@@ -528,7 +532,9 @@
     "        \"\"\"\n",
     "        \n",
     "        sekiro_agent.save_evaluate_network()    # 这个数据学习完毕，保存网络权重\n",
-    "        sekiro_agent.reward_system.save_reward_curve(save_path='learn_offline.png')    # 绘制 reward 曲线并保存在当前目录\n",
+    "        sekiro_agent.reward_system.save_reward_curve(\n",
+    "            save_path = os.path.join('Data_quality', target, filename[:-4]+'.png')\n",
+    "        )    # 绘制 reward 曲线并保存\n",
     "\n",
     "    else:\n",
     "        print(f'{filename} does not exist ')\n",
@@ -555,10 +561,10 @@
     "\n",
     "    # 集齐 (S, A, R, S')，开始存储\n",
     "    sekiro_agent.replayer.store(\n",
-    "        roi(screen, x, x_w, y, y_h),\n",
+    "        cv2.resize(roi(screen, x, x_w, y, y_h), (ROI_WIDTH, ROI_HEIGHT)),    # 截取感兴趣区域并图像缩放\n",
     "        action,\n",
     "        reward,\n",
-    "        roi(next_screen, x, x_w, y, y_h)\n",
+    "        cv2.resize(roi(next_screen, x, x_w, y, y_h), (ROI_WIDTH, ROI_HEIGHT))    # 截取感兴趣区域并图像缩放\n",
     "    )    # 存储经验\n",
     "\n",
     "    # ---------- learn ----------\n",
@@ -695,16 +701,16 @@
     "**训练部分**  \n",
     "~~~python\n",
     "if train:\n",
-    "    if not (np.sum(screen == 0) > 32400):    # 270 * 480 / 4 = 32400 ，当图像有1/4变成黑色（像素值为0）的时候停止暂停存储数据\n",
+    "    if not (np.sum(screen == 0) > 97200):    # 270 * 480 * 3 / 4 = 97200 ，当图像有1/4变成黑色（像素值为0）的时候停止暂停存储数据\n",
     "\n",
     "        # ---------- store ----------\n",
     "\n",
     "        # 集齐 (S, A, R, S')，开始存储\n",
     "        sekiro_agent.replayer.store(\n",
-    "            roi(screen, x, x_w, y, y_h),\n",
+    "            cv2.resize(roi(screen, x, x_w, y, y_h), (ROI_WIDTH, ROI_HEIGHT)),    # 截取感兴趣区域并图像缩放\n",
     "            action,\n",
     "            reward,\n",
-    "            roi(next_screen, x, x_w, y, y_h)\n",
+    "            cv2.resize(roi(next_screen, x, x_w, y, y_h), (ROI_WIDTH, ROI_HEIGHT))    # 截取感兴趣区域并图像缩放\n",
     "        )    # 存储经验\n",
     "\n",
     "        # ---------- learn ----------\n",
@@ -749,20 +755,21 @@
    "source": [
     "计算 reward 的原理\n",
     "~~~python\n",
-    "# 约束状态值的上下限，防止波动过大影响训练，也防止异常值和特殊值的影响。\n",
-    "def limit(value, lm):\n",
-    "    if value > lm:\n",
-    "        return lm\n",
-    "    elif value < -lm:\n",
-    "        return -lm\n",
+    "# 约束状态值的上下限，防止异常值和特殊值的影响。\n",
+    "def limit(value, lm1, lm2):\n",
+    "\n",
+    "    if value < lm1:\n",
+    "        return lm1\n",
+    "    elif value > lm2:\n",
+    "        return lm2\n",
     "    else:\n",
     "        return value\n",
     "\n",
     "# 每个状态的计算方法：(现在的状态 - 过去的状态) * 正负强化权重，然后约束上下限\n",
-    "s1 = limit((self.status[0] - self.past_status[0]) *  1, 30)    # 自身生命\n",
-    "s2 = limit((self.status[1] - self.past_status[1]) * -1, 10)    # 自身架势\n",
-    "t1 = limit((self.status[2] - self.past_status[2]) * -1, 20)    # 目标生命\n",
-    "t2 = limit((self.status[3] - self.past_status[3]) *  1, 10)    # 目标架势\n",
+    "s1 = limit((self.status[0] - self.past_status[0]) *  1, -152, +76)    # 自身生命\n",
+    "s2 = limit((self.status[1] - self.past_status[1]) * -1, -10, +10)    # 自身架势\n",
+    "t1 = limit((self.status[2] - self.past_status[2]) * -1, -20,   0)    # 目标生命\n",
+    "t2 = limit((self.status[3] - self.past_status[3]) *  1, -10, +10)    # 目标架势\n",
     "\n",
     "reward = 0.2 * (s1 + t1) + 0.8 * (s2 + t2)\n",
     "~~~"
@@ -799,11 +806,11 @@
     "    self,\n",
     "    n_action = n_action, \n",
     "    gamma = 0.99,\n",
-    "    batch_size = 8,\n",
+    "    batch_size = 128,\n",
     "    replay_memory_size = 20000,\n",
     "    epsilon = 1.0,\n",
     "    epsilon_decrease_rate = 0.999,\n",
-    "    update_freq = 50,\n",
+    "    update_freq = 100,\n",
     "    target_network_update_freq = 300,\n",
     "    model_weights = None,\n",
     "    save_path = None\n",
