--- a/Quick_start.ipynb
+++ b/Quick_start.ipynb
@@ -150,8 +150,8 @@
    "source": [
     "from pysekiro.collect_data import Data_collection\n",
     "# target = 'Genichiro_Ashina' # 苇名弦一郎\n",
-    "# target = 'Inner_Genichiro' # 心中的弦一郎\n",
-    "target = 'Isshin,_the_Sword_Saint' # 剑圣一心\n",
+    "target = 'Inner_Genichiro' # 心中的弦一郎\n",
+    "# target = 'Isshin,_the_Sword_Saint' # 剑圣一心\n",
     "# target = 'Inner_Isshin' # 心中的一心\n",
     "c = Data_collection(target)\n",
     "c.collect_data()"
