--- a/How_it_works.ipynb
+++ b/How_it_works.ipynb
@@ -313,7 +313,7 @@
    "source": [
     "我修改了 grab_screen 的返回值\n",
     "~~~python\n",
-    "return cv2.cvtColor(img, cv2.COLOR_BGRA2GRAY)\n",
+    "return cv2.cvtColor(img, cv2.COLOR_BGRA2BGR)\n",
     "~~~\n",
     "\n",
     "追加了以下内容\n",
@@ -394,8 +394,7 @@
     "x 代表 x轴的起始位置，也是图像的最左边  \n",
     "y 代表 y轴的起始位置，也是图像的最上边  \n",
     "x_w 代表 x轴的终止位置，也是图像的最右边  \n",
-    "y_h 代表 y轴的终止位置，也是图像的最下边  \n",
-    "vertices = [[x, y_h], [x, y], [x_w, y], [x_w, y_h]] (依次代表图像的左下角、左上角、右上角和右下角的位置。)  "
+    "y_h 代表 y轴的终止位置，也是图像的最下边  "
    ]
   },
   {
@@ -413,10 +412,10 @@
    "source": [
     "# 参照着上面的演示自己试一下\n",
     "import cv2\n",
-    "from pysekiro.get_vertices import get_vertices\n",
+    "from pysekiro.get_vertices import get_xywh\n",
     "\n",
-    "img = cv2.imread(\".\\imgs\\demo.png\", 0)\n",
-    "get_vertices(img)"
+    "img = cv2.imread(\".\\imgs\\demo.png\")\n",
+    "get_xywh(img)"
    ]
   },
   {
@@ -456,16 +455,22 @@
    "metadata": {},
    "source": [
     "- 生命值的获取\n",
-    "    - 在灰度图中，像素点值的在一个固定的范围内，用图像阈值处理处理得好的话基本上能准确获取数值。\n",
+    "    1. 截取图像中生命值的区域\n",
+    "    2. 由于剩余生命值部分呈红色，所以进行颜色通道分离，取R(Red)通道的图像\n",
+    "    3. 通过观察发现，剩余生命值部分的像素点的值全部高于100，所以用图像阈值处理，将像素点值低于100的设置为0\n",
+    "    4. 处理完毕，获取数值\n",
     "\n",
     "~~~python\n",
     "# 获取自身生命\n",
     "def get_Self_HP(img):\n",
-    "    img_roi = roi(img, x=29, x_w=182, y=246, y_h=246+1)[0]    # 获取自 get_vertices.py\n",
-    "    retval, img_th = cv2.threshold(img_roi, 60, 255, cv2.THRESH_TOZERO)           # 图像阈值处理，像素点的值低于60的设置为0\n",
-    "    retval, img_th = cv2.threshold(img_th, 80, 255, cv2.cv2.THRESH_TOZERO_INV)    # 图像阈值处理，像素点的值高于80的设置为0\n",
-    "    img_th = np.reshape(img_th, (img_roi.shape))\n",
+    "    img_roi = roi(img, x=29, x_w=182, y=246, y_h=246+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
+    "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
+    "    r = r[0]\n",
+    "    retval, img_th = cv2.threshold(r, 100, 255, cv2.THRESH_TOZERO)           # 图像阈值处理，像素点的值低于100的设置为0\n",
+    "    img_th = np.reshape(img_th, r.shape)\n",
     "    Self_HP = get_value(img_th)    # 获取数值\n",
+    "    # print('\\n', img_th)\n",
+    "    # print(Self_HP)\n",
     "    return Self_HP\n",
     "\n",
     "# 获取目标生命  \n",
@@ -478,36 +483,36 @@
    "metadata": {},
    "source": [
     "- 架势的获取\n",
-    "    - 架势和生命不同，它是从中间开始往两边增加的。我们没有必要两边都获取，只需要一边就够了。我选择的是中间和右边。\n",
-    "    - 还有几个问题比较麻烦，就是架势在归零的时候会不显示，积累到一定时候颜色会变化，生命值低还有异常状态的时候也和正常的时候不一样。设置开启条件后能较稳定的获取数值。\n",
-    "    - 所谓的开启条件，就是架势条中间那条白色的线所在的像素点以及它右边第一个像素点，当这两个像素点满足一定条件，才记录架势。\n",
+    "    - 架势和生命不同，它是从中间开始往两边增加的，我们没有必要两边都获取，只需要一边就够了，这里我选择的是中间和右边。\n",
+    "    - 还有几个问题比较麻烦，就是架势在归零的时候会不显示，积累到一定时候颜色会变化。设置开启条件后能较稳定的获取数值。\n",
+    "    - 所谓的开启条件，就是架势条中间那条白色的线所在的像素点，当这个像素点满足一定条件时，才处理图像并计算数值。\n",
+    "    - \n",
+    "    1. 截取图像中架势的区域\n",
+    "    2. 由于架势的颜色也是偏向于红色（相比蓝色和绿色），所以进行颜色通道分离，取R(Red)通道的图像\n",
+    "    3. 通过观察发现，架势条中间那条白色的线所在的像素点的值大多集中在 156 ~ 159 （架势积累较少时），还有 244 ~ 248 （架势积累较多时），将其视为架势条正在显示的标志，触发开启条件。\n",
+    "    4. 同样做图像阈值处理，处理完成后，获取数值\n",
     "\n",
     "~~~python\n",
     "# 获取自身架势\n",
     "def get_Self_Posture(img):\n",
-    "    img_roi = roi(img, x=240, x_w=290, y=234, y_h=234+1)[0]    # 获取自 get_vertices.py\n",
-    "    retval, img_th = cv2.threshold(img_roi, 100, 255, cv2.THRESH_TOZERO)    # 低于100的像素点的值设置为0\n",
-    "    img_th = np.reshape(img_th, (img_roi.shape))\n",
-    "    \"\"\"\n",
-    "    开启条件，看下面\n",
-    "    \"\"\"\n",
-    "    return Self_Posture\n",
-    "~~~\n",
-    "~~~python\n",
-    "# 获取自身架势的开启条件\n",
-    "if int(img_th[0]) - int(img_th[1]) > 15:\n",
-    "    if img_th[1] in range(100, 125) and img_th[0] in range(145, 165):\n",
+    "    img_roi = roi(img, x=240, x_w=290, y=234, y_h=234+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
+    "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
+    "    r = r[0]\n",
+    "    if 150 < r[0] < 165:    # 开启条件1\n",
+    "        retval, img_th = cv2.threshold(r, 130, 255, cv2.THRESH_TOZERO)    # 图像阈值处理，像素点的值低于130的设置为0\n",
+    "        img_th = np.reshape(img_th, r.shape)\n",
     "        Self_Posture = get_value(img_th)\n",
-    "    elif img_th[1] in range(135, 160) and img_th[0] in range(180, 220):\n",
-    "        Self_Posture = get_value(img_th)\n",
-    "    elif img_th[1] in range(160, 230) and img_th[0] in range(200, 250):\n",
+    "    elif r[0] > 200:    # 开启条件2\n",
+    "        retval, img_th = cv2.threshold(r, 200, 255, cv2.THRESH_TOZERO)    # 图像阈值处理，像素点的值低于200的设置为0\n",
+    "        img_th = np.reshape(img_th, r.shape)\n",
     "        Self_Posture = get_value(img_th)\n",
     "    else:\n",
+    "        img_th = None\n",
     "        Self_Posture = 0\n",
-    "else:\n",
-    "    Self_Posture = 0\n",
-    "~~~\n",
-    "~~~python\n",
+    "    # print('\\n', img_th)\n",
+    "    # print(Self_Posture)\n",
+    "    return Self_Posture\n",
+    "\n",
     "# 获取目标架势\n",
     "# 代码和获取自身架势类似，这里就不贴出来了  \n",
     "~~~"
@@ -548,10 +553,8 @@
     "\n",
     "~~~python\n",
     "# 运行这个\n",
-    "from pysekiro.collect_data import Data_collection\n",
-    "target = 'Genichiro_Ashina' # 苇名弦一郎\n",
-    "c = Data_collection(target)\n",
-    "c.collect_data()\n",
+    "from pysekiro.adjustment import main\n",
+    "main()\n",
     "~~~"
    ]
   }
