--- a/How_is_it_trained.ipynb
+++ b/How_is_it_trained.ipynb
@@ -220,6 +220,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![data_preview.gif](https://raw.githubusercontent.com/ricagj/pysekiro/main/imgs/demo.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**注：以下展示的是我本地的数据集，我没有上传，所以要运行以下代码，请先自己收集至少一个数据集**"
    ]
   },
@@ -248,9 +255,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "target = 'Genichiro_Ashina' # 苇名弦一郎\n",
+    "# target = 'Genichiro_Ashina' # 苇名弦一郎\n",
     "# target = 'Inner_Genichiro' # 心中的弦一郎\n",
-    "# target = 'Isshin,_the_Sword_Saint' # 剑圣一心\n",
+    "target = 'Isshin,_the_Sword_Saint' # 剑圣一心\n",
     "# target = 'Inner_Isshin' # 心中的一心\n",
     "path = os.path.join('The_battle_memory', target, f'training_data-{1}.npy')\n",
     "data = np.load(path, allow_pickle=True)\n",
@@ -265,7 +272,7 @@
    "outputs": [],
    "source": [
     "screen = data[0][0]    # 选取了第一个数据的图像部分\n",
-    "print('图像', screen)\n",
+    "# print('图像', screen)\n",
     "print('形状', screen.shape)"
    ]
   },
@@ -314,7 +321,7 @@
     "print('以视频的形式展示数据。', '要你自己运行才看得见视频')\n",
     "Remaining = len(data)\n",
     "for screen, action_value in data:\n",
-    "    action = np.argmax(action_value)\n",
+    "    action = np.argmax(action_value[:5])\n",
     "\n",
     "    if   action == 0:\n",
     "        a = '攻击'\n",
@@ -332,7 +339,7 @@
     "    cv2.waitKey(1)\n",
     "\n",
     "    Remaining -= 1\n",
-    "    print(f'\\r 剩余: {Remaining:>4}, 动作:{a}{action_value}', end='') # end='\\n'\n",
+    "    print(f'\\r 剩余: {Remaining:>4}, 动作:{a} {action_value}', end='') # end='\\n'\n",
     "    if cv2.waitKey(1) & 0xFF == ord('q'):    # 按 q 键关闭视频\n",
     "        cv2.destroyAllWindows()\n",
     "        break\n",
