--- a/How_it_works.ipynb
+++ b/How_it_works.ipynb
@@ -375,7 +375,7 @@
     "其实就是我无法写出一个自动把血条、架势条抠出来的代码，所以才写的这个半自动的程序。  \n",
     "这个程序的主要作用是，在图像上点击然后自动返回相关的位置信息。这样就能获取到血条或者架势条在图像中的位置信息。  \n",
     "以下是把人物抠出来的演示  \n",
-    "![demo.gif](https://github.com/ricagj/pysekiro_with_RL/blob/main/imgs/demo.gif?raw=true)"
+    "![demo.gif](https://github.com/ricagj/pysekiro/blob/main/imgs/demo.gif?raw=true)"
    ]
   },
   {
@@ -414,7 +414,7 @@
     "import cv2\n",
     "from pysekiro.get_vertices import get_xywh\n",
     "\n",
-    "img = cv2.imread(\".\\imgs\\demo.png\")\n",
+    "img = cv2.imread(\"demo.png\")\n",
     "get_xywh(img)"
    ]
   },
@@ -436,7 +436,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![get_status](https://github.com/ricagj/pysekiro_with_RL/blob/main/imgs/adjustment.png?raw=true)"
+    "![get_status](https://github.com/ricagj/pysekiro/blob/main/imgs/status.jpg?raw=true)"
    ]
   },
   {
@@ -539,22 +539,6 @@
     "            break\n",
     "        count += 1\n",
     "    return count\n",
-    "~~~"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "不理解的话就把 get_status.py 内的以下代码取消注释然后去运行下面的代码\n",
-    "~~~python\n",
-    "#     print('\\n', img_th)\n",
-    "~~~\n",
-    "\n",
-    "~~~python\n",
-    "# 运行这个\n",
-    "from pysekiro.adjustment import main\n",
-    "main()\n",
     "~~~"
    ]
   }
