--- a/Quick_start.ipynb
+++ b/Quick_start.ipynb
@@ -67,7 +67,7 @@
    "metadata": {},
    "source": [
     "- 将游戏窗口放在左上方  \n",
-    "![example_01.png](https://github.com/ricagj/pysekiro_with_RL/blob/main/imgs/example_01.png?raw=true?raw=true)"
+    "![example_01.png](https://github.com/ricagj/pysekiro/blob/main/imgs/example_01.png?raw=true?raw=true)"
    ]
   },
   {
@@ -101,7 +101,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![adjustment.png](https://github.com/ricagj/pysekiro_with_RL/blob/main/imgs/adjustment.png?raw=true)"
+    "![adjustment.png](https://github.com/ricagj/pysekiro/blob/main/imgs/adjustment.png?raw=true)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![adjustment.gif](https://github.com/ricagj/pysekiro/blob/main/imgs/adjustment.gif?raw=true)"
    ]
   },
   {
@@ -149,8 +156,8 @@
    "outputs": [],
    "source": [
     "from pysekiro.collect_data import Data_collection\n",
-    "# target = 'Genichiro_Ashina' # 苇名弦一郎\n",
-    "target = 'Inner_Genichiro' # 心中的弦一郎\n",
+    "target = 'Genichiro_Ashina' # 苇名弦一郎\n",
+    "# target = 'Inner_Genichiro' # 心中的弦一郎\n",
     "# target = 'Isshin,_the_Sword_Saint' # 剑圣一心\n",
     "# target = 'Inner_Isshin' # 心中的一心\n",
     "c = Data_collection(target)\n",
@@ -183,7 +190,7 @@
     "\n",
     "target = 'Genichiro_Ashina' # 苇名弦一郎\n",
     "\n",
-    "train(target, start=1, end=1)"
+    "train(target, start=1, end=1, batch_size=128, epochs=1,  model_weights=None)"
    ]
   },
   {
@@ -201,7 +208,7 @@
    "source": [
     "from learn_online import learn_online as test\n",
     "\n",
-    "test(model_weights='dl_weights.h5')"
+    "test(model_weights='dl_weights.h5', save_path=None)"
    ]
   },
   {
@@ -242,7 +249,7 @@
    "source": [
     "from learn_online import learn_online\n",
     "\n",
-    "learn_online(save_path='Online_w.h5')"
+    "learn_online(model_weights=None, save_path='Online_w.h5')"
    ]
   },
   {
@@ -269,7 +276,7 @@
    "source": [
     "from learn_online import learn_online\n",
     "\n",
-    "learn_online(model_weights='Online_w.h5')"
+    "learn_online(model_weights='Online_w.h5', save_path=None)"
    ]
   },
   {
@@ -304,7 +311,7 @@
     "from learn_offline import learn_offline\n",
     "\n",
     "target = 'Genichiro_Ashina' # 苇名弦一郎\n",
-    "learn_offline(target, start=1, end=1, save_path='offline_w.h5')"
+    "learn_offline(target, start=1, end=1, model_weights=None, save_path='offline_w.h5')"
    ]
   },
   {
@@ -356,7 +363,7 @@
    "source": [
     "from learn_online import learn_online\n",
     "\n",
-    "learn_online(model_weights='online_w.h5')"
+    "learn_online(model_weights='online_w.h5', save_path=None)"
    ]
   },
   {
