--- a/Quick_start.ipynb
+++ b/Quick_start.ipynb
@@ -4,6 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**以下所有的代码块都是这样**\n",
+    "- 当提示 Ready! 后\n",
+    "    - 按 T 开始\n",
+    "    - 按 P 结束"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 1 游戏设置"
    ]
   },
@@ -92,15 +102,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 当提示 Ready! 后\n",
-    "    - 按 T 开始\n",
-    "    - 按 P 结束"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "![adjustment.png](https://github.com/ricagj/pysekiro/blob/main/imgs/adjustment.png?raw=true)"
    ]
   },
@@ -122,14 +123,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1 用深度学习从已有的数据中学习"
+    "## 2.1 无需收集数据直接开始训练"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from learn_online import learn_online\n",
+    "from learn_online import learn_online as test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 打开游戏，校准游戏窗口位置，然后运行这个开始直接在游戏中训练\n",
+    "learn_online(save_path='online_w.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 读取模型参数，测试学习的效果\n",
+    "test(model_weights='online_w.h5')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 2.1.1 收集数据"
+    "## 2.2 需要收集数据"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.2.1 收集数据"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 数据集\n",
+    "    - 格式 n行2列 每行由[**图像**, **按键**]组成\n",
+    "        - 图像\n",
+    "            - 区域：左上角处 1280x720\n",
+    "            - 存储标准：480x270, BGR\n",
+    "        - 按键\n",
+    "            - \"攻击\"、\"防御\"、垫步\"  、\"跳跃\" 、\"其他\" 、\"使用道具\"、\"移动 前\"、\"移动 后\"、\"移动 左\"、\"移动 右\"\n",
+    "            - J    \\ K     \\ LSHIFT \\ SPACE \\ 无操作 \\ R        \\ W       \\ S        \\ A       \\ D\n",
+    "            - 存储格式：列表\n",
+    "    - 每个数据集都是一次完整的战斗\n",
+    "        - 要求 禁所有忍具，禁所有流派招式，禁复活（出现这些行为的数据集要及时删除，不然会影响训练效果）\n",
+    "        - 建议 双难（交护符和钟鬼） \n",
+    "        - 可选 使用伤药葫芦等生命回复道具或夜叉戮之降临等BUFF道具"
    ]
   },
   {
@@ -156,10 +213,19 @@
    "outputs": [],
    "source": [
     "from pysekiro.collect_data import Data_collection\n",
-    "target = 'Genichiro_Ashina' # 苇名弦一郎\n",
+    "\n",
+    "target = 'Genichwiro_Ashina' # 苇名弦一郎\n",
     "# target = 'Inner_Genichiro' # 心中的弦一郎\n",
     "# target = 'Isshin,_the_Sword_Saint' # 剑圣一心\n",
-    "# target = 'Inner_Isshin' # 心中的一心\n",
+    "# target = 'Inner_Isshin' # 心中的一心"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "c = Data_collection(target)\n",
     "c.collect_data()"
    ]
@@ -168,138 +234,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 当提示 Ready! 后\n",
-    "    - 按 T 开始\n",
-    "    - 按 P 结束"
+    "#### 2.2.2 开始训练"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 2.1.2 训练模型"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pysekiro.train_with_dl import train\n",
-    "\n",
-    "target = 'Genichiro_Ashina' # 苇名弦一郎\n",
-    "\n",
-    "train(target, start=1, end=1, batch_size=128, epochs=1,  model_weights=None)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### 2.1.3 测试模型"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from learn_online import learn_online as test\n",
-    "\n",
-    "test(model_weights='dl_weights.h5', save_path=None)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- 当提示 Ready! 后\n",
-    "    - 按 T 开始\n",
-    "    - 按 P 结束"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2.2 用强化学习从零开始在实战中学习"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- 注：如果选择这种方式，可能学习过程会较长"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### 2.2.1 在线学习"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from learn_online import learn_online\n",
-    "\n",
-    "learn_online(model_weights=None, save_path='Online_w.h5')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- 当提示 Ready! 后\n",
-    "    - 按 T 开始\n",
-    "    - 按 P 结束"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### 2.2.2 测试模型"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from learn_online import learn_online\n",
-    "\n",
-    "learn_online(model_weights='Online_w.h5', save_path=None)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- 当提示 Ready! 后\n",
-    "    - 按 T 开始\n",
-    "    - 按 P 结束"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2.3 用强化学习从已有的数据中学习，再在实战中继续学习"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### 2.3.1 离线学习"
+    "- 以下是用“苇名弦一郎”战斗数据学习的示例。\n",
+    "- 如果想用其他Boss的战斗数据学习，那就把target改成对应的Boss的名字"
    ]
   },
   {
@@ -309,23 +252,20 @@
    "outputs": [],
    "source": [
     "from learn_offline import learn_offline\n",
+    "from learn_online import learn_online\n",
+    "from learn_online import learn_online as test\n",
     "\n",
-    "target = 'Genichiro_Ashina' # 苇名弦一郎\n",
-    "learn_offline(target, start=1, end=1, model_weights=None, save_path='offline_w.h5')"
+    "target = 'Genichwiro_Ashina' # 苇名弦一郎\n",
+    "# target = 'Inner_Genichiro' # 心中的弦一郎\n",
+    "# target = 'Isshin,_the_Sword_Saint' # 剑圣一心\n",
+    "# target = 'Inner_Isshin' # 心中的一心"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 2.3.2 在线学习"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "这里与前面的从零开始在线学习的区别是，读取了离线学习的模型权重"
+    "##### 2.2.2.1 离线学习"
    ]
   },
   {
@@ -334,25 +274,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from learn_online import learn_online\n",
-    "\n",
-    "learn_online(model_weights='offline_w.h5', save_path='online_w.h5')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- 当提示 Ready! 后\n",
-    "    - 按 T 开始\n",
-    "    - 按 P 结束"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### 2.3.3 测试模型"
+    "# 指定 start 和 end 后开始训练\n",
+    "learn_offline(target, start=1, end=20, save_path='offline_w.h5')"
    ]
   },
   {
@@ -361,18 +284,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from learn_online import learn_online\n",
-    "\n",
-    "learn_online(model_weights='online_w.h5', save_path=None)"
+    "# 读取离线学习的模型参数，测试学习的效果\n",
+    "test(model_weights='offline_w.h5')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 当提示 Ready! 后\n",
-    "    - 按 T 开始\n",
-    "    - 按 P 结束"
+    "##### 2.2.2.2 在线学习"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 读取离线学习的模型参数，然后在游戏中继续训练\n",
+    "learn_online(model_weights='offline_w.h5', save_path='on_off_w.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 读取模型参数，测试学习的效果\n",
+    "test(model_weights='on_off_w.h5')"
    ]
   }
  ],
