--- a/Quick_start.ipynb
+++ b/Quick_start.ipynb
@@ -102,14 +102,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![adjustment.png](https://github.com/ricagj/pysekiro/blob/main/imgs/adjustment.png?raw=true)"
+    "还是不懂的话，就看这个gif https://github.com/ricagj/pysekiro/blob/main/imgs/adjustment.gif"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://github.com/ricagj/pysekiro/blob/main/imgs/adjustment.gif"
+    "![adjustment.png](https://github.com/ricagj/pysekiro/blob/main/imgs/adjustment.png?raw=true)"
    ]
   },
   {
@@ -127,13 +127,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 在线学习"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "~~~python\n",
+    "def learn_online(\n",
+    "    model_weights=None,\n",
+    "    save_path=None,\n",
+    "    reward_curve_save_path='learn_online.png'\n",
+    "    ):\n",
+    "~~~"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **model_weights** 指定模型权重的路径，读取模型权重的参数。默认为None。\n",
+    "- **save_path** 指定模型权重参数保存的路径。参数默认为None，保存为'tmp_weights.h5'。\n",
+    "    - **注：默认是测试模型，若设置该参数，就会开启训练模式**\n",
+    "- **reward_curve_save_path** 奖励曲线保存路径，默认为'learn_online.png'。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from learn_online import learn_online\n",
-    "from learn_online import learn_online as test"
+    "from learn_online import learn_online"
    ]
   },
   {
@@ -152,8 +181,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 读取模型参数，测试学习的效果\n",
-    "test(model_weights='online_w.h5')"
+    "# 读取模型参数，测试学习的效果（不设置save_path就是测试模式）\n",
+    "learn_online(model_weights='online_w.h5', reward_curve_save_path='learn_online_t.png')"
    ]
   },
   {
@@ -214,8 +243,8 @@
    "source": [
     "from pysekiro.collect_data import Data_collection\n",
     "\n",
-    "target = 'Genichwiro_Ashina' # 苇名弦一郎\n",
-    "# target = 'Inner_Genichiro' # 心中的弦一郎\n",
+    "# target = 'Genichiro_Ashina' # 苇名弦一郎\n",
+    "target = 'Inner_Genichiro' # 心中的弦一郎\n",
     "# target = 'Isshin,_the_Sword_Saint' # 剑圣一心\n",
     "# target = 'Inner_Isshin' # 心中的一心"
    ]
@@ -253,9 +282,8 @@
    "source": [
     "from learn_offline import learn_offline\n",
     "from learn_online import learn_online\n",
-    "from learn_online import learn_online as test\n",
     "\n",
-    "target = 'Genichwiro_Ashina' # 苇名弦一郎\n",
+    "target = 'Genichiro_Ashina' # 苇名弦一郎\n",
     "# target = 'Inner_Genichiro' # 心中的弦一郎\n",
     "# target = 'Isshin,_the_Sword_Saint' # 剑圣一心\n",
     "# target = 'Inner_Isshin' # 心中的一心"
@@ -269,13 +297,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# 指定 start 和 end 后开始训练\n",
-    "learn_offline(target, start=1, end=20, save_path='offline_w.h5')"
+    "~~~python\n",
+    "def learn_offline(\n",
+    "    target,\n",
+    "    start=1,\n",
+    "    end=1,\n",
+    "    model_weights=None,\n",
+    "    save_path=None,\n",
+    "    reward_curve_save_path='learn_offline.png'\n",
+    "    ):\n",
+    "~~~"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **target** 指定训练的对象\n",
+    "- **start** 指定第一个训练的数据集的序号\n",
+    "- **end** 指定最后一个训练的数据集的序号\n",
+    "    - 数据集的序号指的是数据集文件名里唯一的数字。e.g. training_data-19.npy 序号为 19\n",
+    "    - 注：必须 start < end\n",
+    "- **model_weights** 指定模型权重的路径，读取模型权重的参数。默认为None。也可用以支持增量学习。\n",
+    "    - 当你搜集新的数据集之后想继续训练，设置该参数以继续训练。\n",
+    "    - 当你在训练过程中发生了某种意外终止了训练，设置该参数并把发生意外时正在训练的那个数据集的序号设置为start以继续训练。\n",
+    "- **save_path** 指定模型权重参数保存的路径。参数默认为None，保存为'tmp_weights.h5'。\n",
+    "- **reward_curve_save_path** 奖励曲线保存路径，默认为'learn_offline.png'。"
    ]
   },
   {
@@ -284,8 +334,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 读取离线学习的模型参数，测试学习的效果\n",
-    "test(model_weights='offline_w.h5')"
+    "# 指定 start 和 end 后开始训练\n",
+    "learn_offline(target, start=1, end=1, save_path='offline_w.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 读取离线学习的模型参数，测试学习的效果（不设置save_path就是测试模式）\n",
+    "learn_online(model_weights='offline_w.h5', reward_curve_save_path='learn_offline_t.png')"
    ]
   },
   {
@@ -293,6 +353,14 @@
    "metadata": {},
    "source": [
     "##### 2.2.2.2 在线学习"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "跟前面那个在线学习的区别是读取了离线学习的模型参数  \n",
+    "这意味着前面那个在线学习是零基础开始而这里的在线学习具备了一定的经验"
    ]
   },
   {
@@ -311,8 +379,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 读取模型参数，测试学习的效果\n",
-    "test(model_weights='on_off_w.h5')"
+    "# 读取模型参数，测试学习的效果（不设置save_path就是测试模式）\n",
+    "learn_online(model_weights='on_off_w.h5', reward_curve_save_path='on_off_t.png')"
    ]
   }
  ],
