--- a/How_it_works.ipynb
+++ b/How_it_works.ipynb
@@ -64,9 +64,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "形状 (270, 480, 3)\n"
+     ]
+    }
+   ],
    "source": [
     "# 运行以下代码，就会抓取当前的屏幕图像\n",
     "import cv2\n",
@@ -132,9 +140,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Press \"ESC\" to quit. \n",
+      "\n",
+      " x=388, x_w=815, y=240, y_h=598\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 参照着上面的演示自己试一下\n",
     "import cv2\n",
@@ -388,9 +407,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['P']                                                           "
+     ]
+    }
+   ],
    "source": [
     "from pysekiro.get_keys import key_check\n",
     "while True:\n",
@@ -584,7 +611,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   },
   "toc-autonumbering": false
  },
