Update and fix bug

--- a/Quick_start.ipynb
+++ b/Quick_start.ipynb
@@ -131,7 +131,8 @@
     "        model_weights=None,\n",
     "        save_path=None,\n",
     "        reward_curve_save_path='reward.png',\n",
-    "        cheating_mode=False    # 作弊模式\n",
+    "        cheating_mode=False,    # 作弊模式\n",
+    "        play_yourself=False\n",
     "    ):\n",
     "~~~"
    ]
@@ -226,7 +227,7 @@
    "outputs": [],
    "source": [
     "# 打开游戏，校准游戏窗口位置，然后运行这个开始直接在游戏中训练\n",
-    "train = Play_Sekiro(save_path=target+'_w.h5', reward_curve_save_path=target+'_train.png', cheating_mode=True)\n",
+    "train = Play_Sekiro(save_path=target+'_c_w.h5', reward_curve_save_path=target+'_c_train.png', cheating_mode=True)\n",
     "train.run()"
    ]
   },
@@ -237,7 +238,7 @@
    "outputs": [],
    "source": [
     "# 读取模型参数，测试学习的效果（不设置save_path就是测试模式）\n",
-    "test = Play_Sekiro(model_weights=target+'_w.h5', reward_curve_save_path=target+'_test.png', cheating_mode=True)\n",
+    "test = Play_Sekiro(model_weights=target+'_c_w.h5', reward_curve_save_path=target+'_c_test.png', cheating_mode=True)\n",
     "test.run()"
    ]
   }
